--- a/index.html
+++ b/index.html
@@ -1,84 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>Smart Dustbin Dashboard</title>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f7f7f7;
       text-align: center;
-      padding: 50px;
-    }
-    .status-box {
-      background-color: white;
-      border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      display: inline-block;
-      min-width: 300px;
+      padding: 30px;
     }
     h1 {
-      color: #333;
+      margin-bottom: 40px;
     }
-    .status {
-      font-size: 2em;
-      margin-top: 10px;
-      font-weight: bold;
+    #chart-container {
+      width: 90%;
+      max-width: 1000px;
+      margin: auto;
     }
-    .distance {
-      font-size: 1.5em;
-      margin-top: 10px;
-    }
-    .status[data-value="Empty"] {
-      color: green;
-    }
-    .status[data-value="Half"] {
-      color: orange;
-    }
-    .status[data-value="Full"] {
-      color: red;
+    canvas {
+      width: 100% !important;
+      height: 500px !important; /* makes graph tall */
     }
   </style>
 </head>
 <body>
-  <h1>Smart Dustbin Dashboard</h1>
-  <div class="status-box">
-    <div>Bin Status: <span id="status" class="status" data-value="">--</span></div>
-    <div>Distance: <span id="distance" class="distance">--</span> cm</div>
+  <h1>Smart Dustbin Fill Level Dashboard</h1>
+  <div id="chart-container">
+    <canvas id="dustbinChart"></canvas>
   </div>
 
   <script>
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyCFUCHHLM-bs-YDmm5OC8avr1k3bv7ScW8",
-    authDomain: "smartdustbin-e4945.firebaseapp.com",
-    databaseURL: "https://smartdustbin-e4945-default-rtdb.firebaseio.com",
-    projectId: "smartdustbin-e4945",
-    storageBucket: "smartdustbin-e4945.firebasestorage.app",
-    messagingSenderId: "142631538244",
-    appId: "1:142631538244:web:57e9c2ed2c04ad11f0b611",
-    measurementId: "G-WK59Z2THVR"
-  };
-
+    // 🔥 Replace with your Firebase config
+    var firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+      databaseURL: "https://smartdustbin-e4945-default-rtdb.firebaseio.com",
+      projectId: "YOUR_PROJECT_ID",
+      storageBucket: "YOUR_PROJECT_ID.appspot.com",
+      messagingSenderId: "YOUR_SENDER_ID",
+      appId: "YOUR_APP_ID"
+    };
     firebase.initializeApp(firebaseConfig);
-    const dbRef = firebase.database().ref("SmartDustbin");
 
-    const statusEl = document.getElementById("status");
-    const distanceEl = document.getElementById("distance");
-
-    dbRef.on("value", (snapshot) => {
-      const data = snapshot.val();
-      if (data) {
-        statusEl.textContent = data.Status;
-        statusEl.setAttribute("data-value", data.Status);
-        distanceEl.textContent = data.Distance;
+    var ctx = document.getElementById('dustbinChart').getContext('2d');
+    var dustbinChart = new Chart(ctx, {
+      type: 'bar',
+      data: {
+        labels: ['Bin 1 (Live)', 'Bin 2 (Dummy)', 'Bin 3 (Dummy)'],
+        datasets: [{
+          label: 'Fill Level (%)',
+          data: [0, 65, 20], // Bin 2 and 3 dummy values
+          backgroundColor: ['grey', 'grey', 'grey']
+        }]
+      },
+      options: {
+        responsive: true,
+        maintainAspectRatio: false,
+        scales: {
+          y: {
+            beginAtZero: true,
+            max: 100
+          }
+        },
+        plugins: {
+          legend: { display: false }
+        }
       }
+    });
+
+    // 🔄 Live Update for Bin 1
+    var dbRef = firebase.database().ref("dustbin/fillLevel");
+    dbRef.on("value", function(snapshot) {
+      var value = snapshot.val();
+      dustbinChart.data.datasets[0].data[0] = value;
+      dustbinChart.update();
     });
   </script>
 </body>
 </html>
-\
