--- a/index.html
+++ b/index.html
@@ -34,14 +34,25 @@
 
   <script>
     // 🔥 Replace with your Firebase config
+    // var firebaseConfig = {
+    //   apiKey: "YOUR_API_KEY",
+    //   authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+    //   databaseURL: "https://smartdustbin-e4945-default-rtdb.firebaseio.com",
+    //   projectId: "YOUR_PROJECT_ID",
+    //   storageBucket: "YOUR_PROJECT_ID.appspot.com",
+    //   messagingSenderId: "YOUR_SENDER_ID",
+    //   appId: "YOUR_APP_ID"
+    // };
+
     var firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+      apiKey: "AIzaSyCFUCHHLM-bs-YDmm5OC8avr1k3bv7ScW8",
+      authDomain: "smartdustbin-e4945.firebaseapp.com",
       databaseURL: "https://smartdustbin-e4945-default-rtdb.firebaseio.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT_ID.appspot.com",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID"
+      projectId: "smartdustbin-e4945",
+      storageBucket: "smartdustbin-e4945.firebasestorage.app",
+      messagingSenderId: "142631538244",
+      appId: "1:142631538244:web:57e9c2ed2c04ad11f0b611",
+      measurementId: "G-WK59Z2THVR"
     };
     firebase.initializeApp(firebaseConfig);
 
@@ -81,3 +92,4 @@
   </script>
 </body>
 </html>
+
